2001-03-14  Kris Rehberg  <kriston@aol.com>

	* include/Makefile.global: Makefile.global wasn't working on
	OpenBSD 2.8.  Got rid of -E and changed libtcl8.3g.a to
	libtcl83g.a for all BSD platforms.  Many thanks to John Borwick
	for the patch!

	* nsd/conn.c: Straightened out an error text while looking for
	something else.
	
	* nsd/serv.c: [ #232139 ] Buffer overflow in ParseAuth().
	ParseAuth() uses a 256-byte buffer for decoding authentication
	data. Unfortunately, Ns_HtuuDecode() does not do an adequate job
	in preventing data overflow due to the way it tries to loop unroll
	4-bytes per iteration.  To reproduce: Using IE 5.xxx, navigate to
	a page that challenges (ie 401 return). Fill the user/pwd fields
	with as much data as possible. Hit return, and watch AOLserver die
	due to stack corruption (on Linux, at least). It is preferable to
	allocate the storage dynamically.  Thanks to Adam Zell for the bug
	report and patch!!

	* generic/tclCmdIL.c (InfoProcsCmd): [ #230640 ] memory leak in
	"info procs" command.  Arsdigita plus-patches fixed a memory leak
	in "info procs" command (in Tcl library). It neglects to free
	memory after the "info procs" command is executed. nsd8x only.
	Fixed via hack to Tcl8.3.2 in AOLserver 3.3 (Jim Davidson).
	
	* thread/tcl8x.c: [ #406708 ] Tcl TSD data leaks on
	thread-exit. Added new, custom per-thread Tcl_Obj allocator for
	NsTclFinalizeThread().  Fixed is in 3.31 and 4.x.  Check
	thread/tcl8x.c for detailed comments.  Thanks to Zoran Vasiljevic
	for the bug report and suggesting a fix.
	
	* tcl/namespace.tcl: [ #230624 ] Namespaces are not used properly.
	There is a problem with current modules/tcl/namespace.tcl Instead
	of correctly using namespace import/export capabilities, it just
	makes a copy of each procedure found within a namespace, even it
	is imported from a foreign namespace. This adds unnecessary heap
	space to have each exported procedure body replicated in more than