@@ -70,7 +70,7 @@
 #define SERV_SENDFDMIN_INT     2048
 #define SERV_THREADTIMEOUT_INT 120
 #define SERV_URLSTATS_BOOL     NS_FALSE
-#define SERV_QUIET_BOOL        NS_FALSE
+#define SERV_QUIET_BOOL        NS_TRUE
 
 #define ADP_CACHESIZE_INT      5000*1024
 #define ADP_CACHE_BOOL         NS_TRUE
